--- a/book.bib
+++ b/book.bib
@@ -41,7 +41,7 @@
   number = {3},
   pages = {e72},
   pmid = {27025287},
-  title = {{Mobile Phone-Based Unobtrusive Ecological Momentary Assessment of Day-to-Day Mood: An Explorative Study}},
+  title = {{Mobile phone-based unobtrusive ecological momentary assessment of day-to-day mood: An explorative study}},
   volume = {18},
   year = {2016}
 }
@@ -58,7 +58,7 @@
 }
 
 @Article{Bates2015,
-  title = {Fitting Linear Mixed-Effects Models Using {lme4}},
+  title = {Fitting inear Mixed-Effects Models using {lme4}},
   author = {Douglas Bates and Martin M{\"a}chler and Ben Bolker and Steve Walker},
   journal = {Journal of Statistical Software},
   year = {2015},
@@ -84,7 +84,7 @@
 }
 
 @Book{Bennik2015,
-  title     = {Every Dark Cloud Has a Colored Lining: The Relation Between Positive and Negative Affect and Reactivity to Positive and Negative Events},
+  title     = {Every dark cloud has a colored lining: The relation between positive and negative affect and reactivity to positive and negative events},
   publisher = {University of Groningen},
   year      = {2015},
   author    = {Bennik, Elise Charlotte},
@@ -136,7 +136,7 @@
   number = {1},
   pages = {91--121},
   pmid = {23537483},
-  title = {{Network Analysis: An Integrative Approach to the Structure of Psychopathology}},
+  title = {{Network analysis: An integrative approach to the structure of psychopathology}},
   volume = {9},
   year = {2013}
 }
@@ -158,7 +158,7 @@
 }
 
 @article{burton2013,
-  title={Activity monitoring in patients with depression: a systematic review},
+  title={Activity monitoring in patients with depression: A systematic review},
   author={Burton, Christopher and McKinstry, Brian and T{\u{a}}tar, Aurora Szentagotai and Serrano-Blanco, Antoni and Pagliari, Claudia and Wolters, Maria},
   journal={Journal of affective disorders},
   volume={145},
@@ -169,7 +169,7 @@
 }
 
 @article{buysse2007,
-  title={Daytime symptoms in primary insomnia: a prospective analysis using ecological momentary assessment},
+  title={Daytime symptoms in primary insomnia: A prospective analysis using ecological momentary assessment},
   author={Buysse, Daniel J and Thompson, Wesley and Scott, John and Franzen, Peter L and Germain, Anne and Hall, Martica and Moul, Douglas E and Nofzinger, Eric A and Kupfer, David J},
   journal={Sleep Medicine},
   volume={8},
@@ -182,7 +182,7 @@
 
 @Article{Calenge2006,
   author = {C. Calenge},
-  title = {The package adehabitat for the R software: tool for the analysis of space and habitat use by animals},
+  title = {The package adehabitat for the R software: Tool for the analysis of space and habitat use by animals},
   journal = {Ecological Modelling},
   volume = {197},
   number = {3-4},
@@ -270,7 +270,7 @@
 
 @Article{Cranford2006,
   author          = {Cranford, James A. and Shrout, Patrick E. and Iida, Masumi and Rafaeli, Eshkol and Yip, Tiffany and Bolger, Niall},
-  title           = {{A Procedure for Evaluating Sensitivity to Within-Person Change: Can Mood Measures in Diary Studies Detect Change Reliably?}},
+  title           = {{A procedure for evaluating sensitivity to within-person change: Can mood measures in diary studies detect change reliably?}},
   journal         = {Personality and Social Psychology Bulletin},
   year            = {2006},
   volume          = {32},
@@ -310,7 +310,7 @@
 
 @Article{Desmet2016,
   author  = {Desmet, Pieter M A and Vastenburg, Martijn H and Romero, Natalia},
-  title   = {{Mood measurement with Pick-A-Mood: review of current methods and design of a pictorial self-report scale}},
+  title   = {{Mood measurement with Pick-A-Mood: Review of current methods and design of a pictorial self-report scale}},
   journal = {Journal of Design Research},
   year    = {2016},
   volume  = {14},
@@ -322,7 +322,7 @@
 
 @Article{Dunton2017,
   author          = {Dunton, Genevieve Fridlund},
-  title           = {{Ecological Momentary Assessment in Physical Activity Research}},
+  title           = {{Ecological momentary assessment in physical activity research}},
   journal         = {Exercise and Sport Sciences Reviews},
   year            = {2017},
   volume          = {45},
@@ -352,7 +352,7 @@
 
 @Article{EbnerPriemerUlrich2009,
   author          = {Ebner-Priemer, Ulrich W. and Kubiak, Thomas and Pawlik, Kurt},
-  title           = {{Ambulatory Assessment}},
+  title           = {{Ambulatory assessment}},
   journal         = {European Psychologist},
   year            = {2009},
   volume          = {14},
@@ -399,7 +399,7 @@
   journal = {IEEE Journal of Biomedical and Health Informatics},
   keywords = {Vector autoregression,electronic patient diary data,statistical software,time series analysis},
   pmid = {25680221},
-  title = {{Automating Vector Autoregression on Electronic Patient Diary Data}},
+  title = {{Automating vector autoregression on electronic patient diary data}},
   year = {2016}
 }
 
@@ -407,7 +407,7 @@
 
 @Misc{Engel2016,
   author        = {Engel, Scott G. and Crosby, Ross D. and Thomas, Graham and Bond, Dale and Lavender, Jason M. and Mason, Tyler and Steffen, Kristine J. and Green, Dan D. and Wonderlich, Stephen A.},
-  title         = {{Ecological Momentary Assessment in Eating Disorder and Obesity Research: a Review of the Recent Literature}},
+  title         = {{Ecological momentary assessment in eating disorder and obesity research: A review of the recent literature}},
   year          = {2016},
   archiveprefix = {arXiv},
   arxivid       = {NIHMS150003},
@@ -481,7 +481,7 @@
   keywords = {Network modeling,Partial correlation networks,Regularization,Tutorial},
   pmid = {29595293},
   publisher = {American Psychological Association},
-  title = {{A Tutorial on Regularized Partial Correlation Networks}},
+  title = {{A tutorial on regularized partial correlation networks}},
   year = {2018}
 }
 
@@ -611,6 +611,17 @@
   publisher={Elsevier}
 }
 
+@article{Haedt2011,
+  title={Hunger and binge eating: A meta-analysis of studies using ecological momentary assessment},
+  author={Haedt-Matt, Alissa A and Keel, Pamela K},
+  journal={International Journal of Eating Disorders},
+  volume={44},
+  number={7},
+  pages={573--578},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
 @Article{Hufford2002,
   author  = {Hufford, Michael R. and Shields, Alan L. and Shiffman, Saul and Paty, Jean and Balabanis, Mark},
   title   = {{Reactivity to ecological momentary assessment: An example using undergraduate problem drinkers.}},
@@ -675,6 +686,17 @@
   issn      = {1548-5943},
   keywords  = {EMA sampling design,EMA-based treatment,Ecological Momentary Assessment (EMA),Ecological momentary intervention (EMI),Substance abuse research},
   pmid      = {18509902},
+}
+
+@article{kirchner2016,
+  title={Spatio-temporal determinants of mental health and well-being: advances in geographically-explicit ecological momentary assessment (GEMA)},
+  author={Kirchner, Thomas R and Shiffman, Saul},
+  journal={Social psychiatry and psychiatric epidemiology},
+  volume={51},
+  number={9},
+  pages={1211--1223},
+  year={2016},
+  publisher={Springer}
 }
 
 @article{Kleiboer2016,
@@ -907,14 +929,15 @@ year = {1999}
   pmid     = {22784687},
 }
 
-@inproceedings{Patel2012,
-  title={Probing the benefits of real-time tracking during cancer care},
-  author={Patel, Rupa A and Klasnja, Predrag and Hartzler, Andrea and Unruh, Kenton T and Pratt, Wanda},
-  booktitle={AMIA Annual Symposium Proceedings},
-  volume={2012},
-  pages={1340},
+@article{Patel2012,
+  title={A review of wearable sensors and systems with application in rehabilitation},
+  author={Patel, Shyamal and Park, Hyung and Bonato, Paolo and Chan, Leighton and Rodgers, Mary},
+  journal={Journal of neuroengineering and rehabilitation},
+  volume={9},
+  number={1},
+  pages={21},
   year={2012},
-  organization={American Medical Informatics Association}
+  publisher={BioMed Central}
 }
 
 @article{Penninx2008,
@@ -1070,6 +1093,17 @@ year = {1999}
   volume        = {461},
 }
 
+@article{schueller2017,
+  title={Ecological momentary interventions for depression and anxiety},
+  author={Schueller, Stephen M and Aguilera, Adrian and Mohr, David C},
+  journal={Depression and anxiety},
+  volume={34},
+  number={6},
+  pages={540--545},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+
 @Misc{Serre2015,
   author    = {Serre, Fuschia and Fatseas, Melina and Swendsen, Joel and Auriacombe, Marc},
   title     = {{Ecological momentary assessment in the investigation of craving and substance use in daily life: A systematic review}},
@@ -1163,6 +1197,17 @@ year = {1999}
   doi     = {10.1207/S15324796ABM2403_09},
   pmid    = {12173681},
   url     = {http://link.springer.com/10.1207/S15324796ABM2403_09},
+}
+
+@article{Swendsen2016,
+  title={Contributions of mobile technologies to addiction research},
+  author={Swendsen, Joel},
+  journal={Dialogues in clinical neuroscience},
+  volume={18},
+  number={2},
+  pages={213},
+  year={2016},
+  publisher={Les Laboratoires Servier}
 }
 
 @Article{Telford2012,
@@ -1298,6 +1343,16 @@ year = {1999}
   pmid      = {25070177},
   publisher = {Elsevier},
   url       = {http://dx.doi.org/10.1016/j.psychres.2014.06.052}
+}
+
+@article{Versluis2016,
+  title={Changing mental health and positive psychological well-being using ecological momentary interventions: a systematic review and meta-analysis},
+  author={Versluis, Anke and Verkuil, Bart and Spinhoven, Philip and van der Ploeg, Melanie M and Brosschot, Jos F},
+  journal={Journal of medical Internet research},
+  volume={18},
+  number={6},
+  year={2016},
+  publisher={JMIR Publications Inc.}
 }
 
 @Book{Venables2002,
